[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/scripts/Sadis.gd" type="Script" id=1]
[ext_resource path="res://src/assets/Enemies/Sadis.png" type="Texture" id=2]
[ext_resource path="res://src/assets/Sound/blow.wav" type="AudioStream" id=3]
[ext_resource path="res://src/assets/Sound/hit.wav" type="AudioStream" id=4]



[sub_resource type="Animation" id=1]
resource_name = "enlarge"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.3, 0.3 ), Vector2( 0.2, 0.2 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Blow")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="CircleShape2D" id=2]
radius = 299.182

[node name="Sadis" type="Area2D"]
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "enlarge"
anims/enlarge = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Blow" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="hit" type="Timer" parent="."]
wait_time = 0.1
[connection signal="body_entered" from="." to="." method="_on_Sadis_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Sadis_body_exited"]
[connection signal="timeout" from="hit" to="." method="_on_hit_timeout"]
